# rezidnt

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  TRADEMARKS.md  install.sh  rezidnt-harness-README.md
.claude-plugin/: plugin.json
bench/harness/: Cargo.toml
bench/harness/src/: lib.rs
bench/harness/tests/: client_deps_hygiene.rs  collate_metrics.rs  manifest_hygiene.rs  orchestration.rs  real_driver.rs  testkit_dev_only.rs
bins/rezidentd/: Cargo.toml
bins/rezidentd/examples/: seed_fixture.rs
bins/rezidentd/src/: gates.rs  main.rs  mcp.rs  runs.rs
bins/rezidentd/tests/: attach_and_ack.rs  board_view_e2e.rs  cli_verbs.rs  delegation_emit.rs  egress_fold_mediated_run_c3_wire.rs  egress_fold_op_mediated_run_c3_wire.rs  get_escalations_e2e.rs  golden_path.rs  init_wrapper_e2e.rs  mcp_http.rs  mcp_workspace_recovery.rs  open_flow.rs  open_partial_failure.rs  open_warning_correlation.rs  operator_liveops_e2e.rs  permit_admin_layer_sourcing.rs  permit_hook_live.rs  permit_hook_unblock.rs  permit_live_unblock.rs  permit_socket_decision.rs  run_persistence.rs  s3_exit_demo_e2e.rs  spawn_composed_c3_wire.rs  spawn_role_emit.rs  spec_init_open_e2e.rs  tail_socket.rs  vet_gate.rs
bins/rezidentd/tests/common/: mod.rs
bins/rezidnt/: Cargo.toml
bins/rezidnt/src/: main.rs  permit_hook.rs
bins/rezidnt/tests/: curl_sh_unix.rs  doctor_cli.rs  doctor_socket_unix.rs  init_wrapper_cli.rs  mcp_stdio_proxy.rs  operator_kill_run_cli.rs  operator_resolve_permit_cli.rs  permit_hook.rs  quickstart_lockstep.rs  rebuild_cli.rs  spec_init_cli.rs
crates/rezidnt-adapters/git/: Cargo.toml
crates/rezidnt-adapters/git/src/: lib.rs  summary.rs
crates/rezidnt-adapters/git/tests/: diff_ready.rs  restart_and_discovery.rs  worktree_conflict.rs  worktree_identity.rs  worktree_lifecycle.rs
crates/rezidnt-cas/: Cargo.toml
crates/rezidnt-cas/src/: lib.rs
crates/rezidnt-cas/tests/: store.rs
crates/rezidnt-client/: Cargo.toml
crates/rezidnt-client/src/: lib.rs
crates/rezidnt-fabric/: Cargo.toml
crates/rezidnt-fabric/src/: burst.rs  bus.rs  lib.rs  log.rs
crates/rezidnt-fabric/tests/: broadcast.rs  chain.rs  chain_fixtures.rs  chain_props.rs  concurrent_publishers.rs  crash_safety.rs  egress_unavailable_fold_c3bc.rs  sandbox_unavailable_fold_c3a.rs
crates/rezidnt-gate/: Cargo.toml
crates/rezidnt-gate/src/: lib.rs  permit.rs
crates/rezidnt-gate/tests/: egress_scope_native_c3bc.rs  exec_contract.rs  exec_could_not_run.rs  intent_lock_native.rs  native_verifiers.rs  path_confinement_native_c3a.rs  permit_aggregate.rs  permit_emit.rs  permit_exec_dispatch.rs  permit_exec_no_vendored_engine.rs  permit_exec_replay.rs  permit_layered_precedence.rs  permit_lifecycle.rs  permit_natives.rs  replay.rs  risk_cap_native_c6.rs  verdict_contract.proptest-regressions  verdict_contract.rs
crates/rezidnt-mcp/: Cargo.toml
crates/rezidnt-mcp/src/: lib.rs  lockfile.rs
crates/rezidnt-mcp/tests/: badge_enforcement.rs  badge_macaroon_verify.rs  board_view_projection.rs  gate_explain.rs  gate_explain_enforcement_mode.rs  get_escalations_projection.rs  http_body_cap.rs  intent_lock_gate_explain.rs  jsonrpc_surface.rs  kill_run_door.rs  lockfile_hostile_tmp.rs  permit_cost_ms.rs  permit_empty_intent_dispatch.rs  permit_exec_live.rs  permit_grant_all_interrogability.rs  permit_layered_live.rs  permit_live_risk_cap_c6.rs  permit_live_spend_cap_c1.rs  permit_resolved_pdp.rs  permit_role_live.rs  permit_single_decision_path.rs  permit_ttl_interrogability.rs  permit_wire_dispatch.rs  request_permission.rs  resolve_permit_door.rs  resolve_permit_interrogability.rs  resolve_permit_scope_coupling.rs  resources.rs  transports.rs
crates/rezidnt-mcp/tests/util/: mod.rs
crates/rezidnt-proto/: Cargo.toml
crates/rezidnt-proto/src/: lib.rs
crates/rezidnt-proto/tests/: hello.rs  permit_pep_enforcement.rs  permit_request.rs  permit_request_paths.rs  requests.rs
crates/rezidnt-run/: Cargo.toml
crates/rezidnt-run/examples/: egress_c3bc_probe.rs  op_fake.rs
crates/rezidnt-run/src/: adapter.rs  badge.rs  capture.rs  compose.rs  egress.rs  lib.rs  reaper.rs  sandbox.rs  secret.rs  spawner.rs  spec.rs
crates/rezidnt-run/tests/: adapter.rs  agent_spec_toml_seam.rs  badge_env.rs  badge_macaroon.rs  capture.rs  compose_child_ownership_c3_wire.rs  compose_no_widening_c3_wire.rs  compose_shared_netns_c3_wire.rs  compose_wire_c3.rs  egress_credential_facts_subjects_fold.rs  egress_degrade_and_deps_c3bc.rs  egress_fold_no_widening_fold.rs  egress_mediation_c3bc.rs  egress_no_widening_c3bc.rs  egress_secret_never_in_log_c3bc.rs  egress_spec_parse_fold.rs  op_secret_degrade_taxonomy_fold.rs  op_secret_leak_discipline.rs  reaper.rs  sandbox_bwrap_confinement_c3a.rs  sandbox_degrade_and_deps_c3a.rs  sandbox_no_widening_c3a.rs  secret_source_composite_dispatch.rs  secret_source_host_file_fold.rs  secret_source_op_resolve.rs  spawn_plan.rs  spawn_plan_permit_hook.rs  spec.rs  spec_role.rs
crates/rezidnt-state/: Cargo.toml
crates/rezidnt-state/src/: lib.rs
crates/rezidnt-state/tests/: action_metered_fold.rs  dr006_integrity_alarms.rs  egress_credential_fold.rs  fixture_replay.rs  kill_run_attribution_fold.rs  pep_enforcement_fold.rs  permit_cost_ms_recorded_only.rs  permit_delegation.rs  permit_grant_all_fold.rs  permit_ledger.proptest-regressions  permit_ledger.rs  permit_resolved_fold.rs  permit_ttl_fold.rs  reducer_props.rs  risk_delta_granted_only_fold_c6.rs  role_fold.rs  run_intent.rs  s1_agent_runs.rs  s2_worktrees.rs  s4_gates.proptest-regressions  s4_gates.rs
crates/rezidnt-testkit/: Cargo.toml
crates/rezidnt-testkit/src/: lib.rs
crates/rezidnt-tui/: Cargo.toml
crates/rezidnt-tui/examples/: board_rich.rs
crates/rezidnt-tui/src/: lib.rs
crates/rezidnt-tui/tests/: board_projection.rs  board_render_golden.rs  read_only.rs  watch_seam_live.rs
crates/rezidnt-types/: Cargo.toml
crates/rezidnt-types/src/: lib.rs  mcp.rs  refs.rs  taxonomy.rs
crates/rezidnt-types/tests/: envelope.rs  payload_cap_serde.rs  taxonomy_drift.rs
(+144 files in other folders)
