[workspace]
resolver = "3"
members = [
    "crates/rezidnt-types",
    "crates/rezidnt-fabric",
    "crates/rezidnt-state",
    "crates/rezidnt-proto",
    "crates/rezidnt-cas",
    "crates/rezidnt-run",
    "crates/rezidnt-adapters/git",
    "crates/rezidnt-gate",
    "crates/rezidnt-mcp",
    "bins/rezidentd",
    "bins/rezidnt",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# path crates
rezidnt-types = { path = "crates/rezidnt-types" }
rezidnt-fabric = { path = "crates/rezidnt-fabric" }
rezidnt-state = { path = "crates/rezidnt-state" }
rezidnt-proto = { path = "crates/rezidnt-proto" }
rezidnt-cas = { path = "crates/rezidnt-cas" }
rezidnt-run = { path = "crates/rezidnt-run" }
rezidnt-adapter-git = { path = "crates/rezidnt-adapters/git" }
rezidnt-gate = { path = "crates/rezidnt-gate" }
rezidnt-mcp = { path = "crates/rezidnt-mcp" }

# dependency notes by the oracle (S4) — nothing NEW declared by the gate
# skeleton: the engine needs only the approved set (tokio process/time for the
# exec runner; blake3 arrives via rezidnt-cas). Two implementer-era additions
# are pre-flagged so the auditor is not surprised:
# - toml: the vet natives (bare-mode / pinned-version / allowed-tools) parse
#   the CAS-pinned agent-spec TOML blob (doc §8: verifiers receive CAS refs).
#   Same crate rezidnt-run already carries (auditor-flagged there at S1);
#   lands in rezidnt-gate with the implementer.
# - a glob matcher for diff-scope / forbidden-path params: hand-rolling the
#   two-star subset the board pins (`src/checkout/**`, `.env`, `secrets/**`)
#   is fine; taking `globset` instead requires a written note here.

# dependency notes by the oracle (S3):
# - schemars: doc §9 BINDING — every MCP tool's JSON Schema is generated from
#   rezidnt-types via schemars so the surface and the types can never drift.
#   Declared in rezidnt-types (derive on the tool-arg shapes) and used by the
#   no-drift oracle tests. In the approved set by force of §9.
# - rmcp: pre-approved for EVALUATION per §16/Appendix A ("verify at S3").
#   Verified 2026-07-17: rmcp 2.2.0 on crates.io, Apache-2.0, official
#   modelcontextprotocol/rust-sdk, server feature present (and itself
#   schemars-backed). Deliberately NOT declared in the oracle skeleton (S2
#   precedent: adapter deps land with the implementer); the board pins
#   JSON-RPC messages in/out, so a thin hand-rolled layer also satisfies it.
schemars = { version = "1", features = ["derive"] }

# dependency notes by the oracle (S2) — nothing NEW flagged: gix (reads) and
# notify (watcher) are already in the approved set (rust-conventions) and are
# declared by the implementer in rezidnt-adapter-git when the stubs land;
# the failing-test skeleton deliberately stays without them.
# S2 implementer: both landed below with rezidnt-adapter-git (doc §7: gix for
# reads — status/branch; git CLI for mutations; notify for the FS watcher).
gix = "0.85"
notify = "8"

# dependency additions noted by the oracle (S1) — declared in rezidnt-run:
# - toml: §13 project-spec parsing (NOT in the approved set; auditor-flagged)
# - rand: 256-bit badge minting, doc §12 (NOT in the approved set; auditor-flagged)
# portable-pty stays out until a TTY-demanding harness arrives (I7).

# approved set (rust-conventions)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
ulid = { version = "1", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1"
tokio = { version = "1", features = [
    "sync",
    "macros",
    "rt-multi-thread",
    "time",
    "net",
    "io-util",
    "process",
    # fs: added with the S0 daemon (socket/db directory setup + stale-socket
    # unlink on the async startup path).
    "fs",
] }
tracing = "0.1"
# clap: approved set (rust-conventions); arrives with the S0 CLI verbs
# (`rezidnt rebuild`/`tail`) as the bin-side arg parser.
clap = { version = "4", features = ["derive"] }

# dependency additions noted by the oracle (S0):
# - time: envelope `ts: OffsetDateTime` per doc §5 (serde-well-known for RFC3339)
# - proptest (dev): reducer-determinism property tests (testing-oracles skill)
# - tempfile (dev): temp SQLite logs in tests
time = { version = "0.3", features = [
    "serde-well-known",
    "formatting",
    "parsing",
    "macros",
] }
proptest = "1"
tempfile = "3"
