[package]
name = "rezidentd"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "the rezidnt daemon"

[dependencies]
anyhow.workspace = true
# blake3: approved set; the hello's `schema` field is a blake3 hash of the
# compiled-in taxonomy (doc §9: ontology hash).
blake3.workspace = true
rezidnt-cas.workspace = true
rezidnt-fabric.workspace = true
# rezidnt-mcp (implementer, S3): the MCP surface (doc §9, I5) — served over
# loopback HTTP when REZIDNT_MCP_LOCKFILE requests it.
rezidnt-mcp.workspace = true
rezidnt-proto.workspace = true
rezidnt-run.workspace = true
rezidnt-types.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
# ulid: approved set; the daemon mints correlation ids for its own events.
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
# S3 oracle board: the gate_explain daemon test PRE-SEEDS the event db with a
# golden fixture (the "forced failure" is a stub verdict ON THE LOG, doc §8 /
# I3) — seeding goes through the real EventLog so the chain column is honest.
rezidnt-fabric.workspace = true
rezidnt-types.workspace = true
# S4 oracle board: the debrief-replay CLI tests seed the daemon's CAS
# (db-relative `cas/` default) with the recorded verifier inputs BEFORE the
# daemon starts - replay is log + CAS, nothing else (I3/I6).
rezidnt-cas.workspace = true
# ulid (dev): the seeded-verdict debrief tests mint correlation ids.
ulid.workspace = true
