[package]
name = "rezidnt"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "the rezidnt CLI"

[dependencies]
anyhow.workspace = true
clap.workspace = true
# rezidnt-cas / rezidnt-gate (S4): the `vet` / `debrief` / `gate why` verbs
# read log + CAS directly (the CLI is a client, I1/I5) and run the verifier
# engine for vet and debrief replay (doc §8, I3/I6).
rezidnt-cas.workspace = true
rezidnt-gate.workspace = true
rezidnt-fabric.workspace = true
rezidnt-proto.workspace = true
# rezidnt-run: `open` parses the §13 spec locally (success line needs
# [project].name; bad specs fail fast with the path named) — S1 CLI verbs.
rezidnt-run.workspace = true
rezidnt-state.workspace = true
rezidnt-types.workspace = true
serde_json.workspace = true
# ulid: approved set; `attach <run-ulid>` parses its argument and `open`
# mints the history/consequence marker.
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
