[package]
name = "rezidnt"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "the rezidnt CLI"

[dependencies]
anyhow.workspace = true
clap.workspace = true
# rezidnt-cas / rezidnt-gate (S4): the `vet` / `debrief` / `gate why` verbs
# read log + CAS directly (the CLI is a client, I1/I5) and run the verifier
# engine for vet and debrief replay (doc §8, I3/I6).
rezidnt-cas.workspace = true
rezidnt-gate.workspace = true
rezidnt-fabric.workspace = true
# rezidnt-mcp (DR-032): `operator kill-run` reads the daemon's 0600 loopback-HTTP
# lockfile (port + operator badge) via the canonical `lockfile::Lockfile` type
# and POSTs a `kill_run` tools/call. Reusing the daemon's lockfile shape avoids
# drift (one definition of the announcement); the loopback POST is hand-rolled
# over std::net (no HTTP crate — I7). The crate is already a workspace member
# built for the daemon, so this adds no new external attack surface.
rezidnt-mcp.workspace = true
rezidnt-proto.workspace = true
# rezidnt-client (DR-023): the shared socket-driving client — connect, check the
# hello, send a Request, tail/read facts. The CLI's former private
# `connect_and_request` moved here; the CLI now consumes it (pure move, no
# behavior change). Also consumed by bench/harness's DaemonDriver.
rezidnt-client.workspace = true
# rezidnt-run: `open` parses the §13 spec locally (success line needs
# [project].name; bad specs fail fast with the path named) — S1 CLI verbs.
rezidnt-run.workspace = true
rezidnt-state.workspace = true
# rezidnt-tui (S5): the read-only fleet board. Pure Graph->BoardView projection
# + ratatui render; the socket wiring for `rezidnt board` lives here (the board
# is a pure client, I1 — no daemon change, rides the existing `Request::Tail`).
rezidnt-tui.workspace = true
rezidnt-types.workspace = true
serde_json.workspace = true
# ulid: approved set; `attach <run-ulid>` parses its argument and `open`
# mints the history/consequence marker.
ulid.workspace = true
# ratatui + crossterm (S5 board, doc-blessed MIT): the `rezidnt board` render
# loop drives a real terminal in raw mode. Declared directly here (not via the
# workspace table) mirroring rezidnt-tui's own manifest; crossterm 0.28 is
# ratatui 0.29's backend. NOTE (rust-conventions "additions via a note"):
# these are the S5-doc-blessed render toolkit, already carried by rezidnt-tui.
ratatui = "0.29"
crossterm = "0.28"
# tokio: the board runs an async runtime (ingest task + render task over a
# watch channel). The other verbs are sync socket clients; board is the first
# async CLI path. Workspace tokio already carries sync/rt/net/io-util.
tokio.workspace = true
# tracing: the ingest/render adapter tasks each carry an info span
# (rust-conventions: every adapter task is spanned).
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
