# S4 gate engine (doc §8 — the differentiation layer): native verifier trait,
# exec-verifier JSON contract, verdict recording, and debrief replay.
#
# ORACLE SKELETON (S3 precedent): types are real, behavior is `todo!()`-
# stubbed so the S4 board is assert-red, not compile-red. Dependency notes:
# everything below is the approved set; toml (vet natives parse the
# CAS-pinned agent-spec blob) and any glob matcher land with the implementer,
# with notes in the root manifest.
[package]
name = "rezidnt-gate"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
rezidnt-types = { workspace = true }
rezidnt-cas = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# toml: the vet natives (bare-mode / pinned-version / allowed-tools) parse the
# CAS-pinned agent-spec TOML blob (doc §8: verifiers receive CAS refs).
# Pre-flagged in the root manifest S4 notes; same version rezidnt-run carries.
toml = "0.8"
thiserror = { workspace = true }
# process + time: the exec runner (spawn argv, feed stdin, enforce the
# wall-clock timeout). io-util for piped stdio.
tokio = { workspace = true, features = ["process", "time", "io-util", "macros", "rt"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
# proptest: the "garbage never parses to pass" conformance property
# (testing-oracles: verifier conformance suite).
proptest = { workspace = true }
# ulid + serde_json: the SP0 permit-emit oracle builds a `permit.requested`
# Event to prove the emit path respects the I2 ≤32KiB envelope boundary
# (tests/permit_emit.rs). serde_json is already a runtime dep; ulid is
# test-only here (the emit constructors take string ids, not Ulid).
ulid = { workspace = true }
# rezidnt-state (dev-only): the SP1 emit-side accumulator pin folds an emitted
# `permit.granted` payload through the real reducer to prove producer↔consumer
# agreement on the delta keys (tests/permit_emit.rs::emitted_deltas_fold_*).
# No cycle: rezidnt-state does not depend on rezidnt-gate.
rezidnt-state = { workspace = true }
