[package]
name = "rezidnt-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rezidnt socket protocol: versioned hello, JSONL frames, socket path (doc §9)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# ulid: Request::Attach carries a run id (S1 protocol addition).
ulid.workspace = true
