# Dependency notes (rust-conventions: additions get a written note):
# - toml: §13 project-spec parsing. NOT in the approved set — flagged in the
#   S1 oracle work order for the auditor.
# - rand: badge minting needs 256 cryptographically random bits (doc §12);
#   nothing in the approved set provides randomness. Flagged likewise.
# - libc (unix only, implementer S1): kill(pid, 0) liveness probe and
#   TERM→KILL delivery for the reaper. The boring syscall wrapper the I8
#   component clause mandates over NIH; tokio already links it. NOT in the
#   approved set — flagged for the auditor.
# portable-pty stays phase-gated OUT of S1: claude-code headless needs no TTY;
# the dep arrives with the first TTY-demanding harness (I7 — no idle deps).
[package]
name = "rezidnt-run"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
rezidnt-types = { path = "../rezidnt-types" }
rezidnt-cas = { path = "../rezidnt-cas" }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "time", "io-util"] }
tracing = { workspace = true }
toml = "0.8"
rand = "0.9"
ulid = { workspace = true }
# time: the SP4b macaroon expiry caveat is an RFC3339 UTC timestamp; the daemon
# supplies a real wall-clock `now` at mint (expiry base) and at the check_badge
# door (expiry eval) — verify itself stays pure/clock-free (I6). Already vendored
# at the workspace root (rezidnt-types owns the envelope `ts` in the same crate)
# — ZERO new dependency (I7), same crate, new consumer.
time = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# proptest (dev): SP4b macaroon monotonicity/forgery property tests
# (testing-oracles skill). Already vendored at the workspace root (used by
# rezidnt-state) — ZERO new dependency (I7), same crate, new dev consumer.
proptest = { workspace = true }
