[package]
name = "rezidnt-state"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rezidnt pure reducers, materialized graph, snapshots (doc §6)"

[dependencies]
rezidnt-types.workspace = true
serde.workspace = true
ulid.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
time.workspace = true
